# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action("sky") {
  script = "//sky/build/symlink.py"

  stamp_file = "$target_gen_dir/symlink.stamp"

  sources = [ "pubspec.yaml" ]
  outputs = [ stamp_file ]

  args = [
    rebase_path("lib", root_build_dir),
    rebase_path("$root_gen_dir/dart-pkg/packages/sky", root_build_dir),
    "--touch",
    rebase_path(stamp_file, root_build_dir)
  ]

  deps = [
    "//mojo/dart/mojo_services",
    "//mojo/dart/mojom",
    "//mojo/public/dart:mojo",
    "//sky/packages/sky_engine",
    "//sky/packages/sky_services",
    "//third_party/dart-pkg",
  ]
}

action("widgets") {
  script = "//sky/build/execute_shell_command.py"

  stamp_file = "$target_gen_dir/widgets.stamp"

  inputs = [
    rebase_path("//sky/sdk/lib/widgets/widgets.dart", root_build_dir)
  ]

  outputs = [ stamp_file ]

  args = [
    "dart",
    rebase_path("//sky/build/verify_widgets_superfile.dart", root_build_dir),
    rebase_path(stamp_file, root_build_dir)
  ]
}

group("sdk") {
  deps = [
    ":sky",
    ":widgets"
  ]
}
